<resources>
    <string name="app_name">Химия цветов</string>
    <string name="back">Назад</string>
    <string name="login">Войти</string>
    <string name="input_number">Введите свой номер телефона</string>
    <string name="input_number2">Введите номер</string>
    <string name="_996">+996</string>
    <string name="next">Далее</string>
    <string name="skip">Пропустить</string>
    <string name="tv_sms">Смс код</string>
    <string name="tv_send_number">Мы отправили код на номер:</string>
    <string name="_996_705_507_157">+996 705 507 157</string>
    <string name="btn_confirm">Подтвердить</string>
    <string name="send_again">Отправить снова</string>
    <string name="incorrect_code">Неверный код</string>
    <string name="home">Главная</string>
    <string name="basket">Корзина</string>
    <string name="catalog">Каталог</string>
    <string name="favorites">Избранное</string>
    <string name="more">Ещё</string>
    <string name="slogan">Букеты цветов на любой случай</string>
    <string name="search">Search</string>
    <string name="som">сом</string>
    <string name="extra">Дополнительно</string>
    <string name="profile">Профиль</string>
    <string name="history_order">История заказов</string>
    <string name="contacts">Наши контакты</string>
    <string name="about_us">О нас</string>
    <string name="exit">Выйти</string>
    <string name="women_day">С женским днем</string>
    <string name="_20">-20%</string>
    <string name="recommended">Рекомендации</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="registrate">Регистрация</string>
    <string name="reg">Регистрация</string>
    <string name="name">Имя</string>
    <string name="all_flowers">Все цветы</string>
    <string name="label_format">%1$.0f сом</string>
    <string name="authorization">Авторизоваться</string>
    <string name="go_to_authorization">Зарегистрируйтесь чтобы добавлять букеты в избранное</string>

    <string-array name="rangeSlider">
        <item>500</item>
        <item>10000</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Сохранить</string>
    <string name="Cancel">Отмена</string>
    <string name="delete_profile">Удалить профиль</string>
    <string name="about_bouquet">О букете</string>
    <string name="comments">Отзывы</string>
    <string name="bouquet_description">Удивите кого-то особенным дизайном в оранжевых тонах, которые напоминают нежную кожицу. Розы, лилии, герберы, хризантемы и альстромерии составляют эту свежую ароматную композицию. Подойдет любительницам персиковых тонов!</string>
    <string name="to_order">Заказать</string>
    <string name="contact_us">Свяжитесь с нами</string>
    <string name="same_text">Вы можете связатся с нами любым удобным вам способом</string>
    <string name="email">himia-tsetov@gmail.com</string>
    <string name="address">Бульвар Эркиндик, 35, 1 этаж</string>
    <string name="address1">Адрес</string>
    <string name="order">Оформить заказ</string>
    <string name="sender">Отправитель</string>
    <string name="phone_number">Номер телефона</string>
    <string name="phone_number1">Тел:</string>
    <string name="wishes">Ваши пожелания</string>
    <string name="wishes1">Пожелания</string>
    <string name="recevier">Получатель</string>
    <string name="note">Записка</string>
    <string name="subtotal">Промежуточный итог</string>
    <string name="discount">Скидка</string>
    <string name="delivery">Доставка</string>
    <string name="total">Всего</string>
    <string name="pickup">Самовывоз</string>
    <string name="order_accepted">Ваш заказ принят!</string>
    <string name="order_accepted_text">Ожидайте звонка администратора для потверждения заказа</string>
    <string name="go_to_home">Перейти на главную</string>
    <string name="go_to_catalog">Перейти в каталог</string>
    <string name="your_orders">Ваши заказы</string>
    <string name="active">Активные</string>
    <string name="completed">Завершенные</string>
    <string name="your_basket">Ваша корзина</string>
    <string name="sum">Сумма</string>
    <string name="all">Все</string>

</resources>