<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="335dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="269dp"
            android:layout_height="69dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="36dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/go_to_authorization"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_authorization"
            android:layout_width="269dp"
            android:layout_height="43dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/white"
            android:text="@string/authorization"
            android:fontFamily="@font/roboto_medium"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:background="@drawable/button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_skip"
            android:layout_width="269dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/white"
            android:text="@string/skip"
            android:fontFamily="@font/roboto_medium"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:background="@drawable/button"/>
    </LinearLayout>
</RelativeLayout>