<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/tv_arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="171dp"
        android:layout_marginTop="85dp"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="70dp"
        style="@style/TextView_32sp_medium"
        android:text="@string/tv_sms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        style="@style/TextView_16sp_medium"
        android:text="@string/tv_send_number"
        app:layout_constraintStart_toStartOf="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <TextView
        android:id="@+id/tv_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_996_705_507_157"
        style="@style/TextView_16sp_medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <com.chaos.view.PinView
        android:id="@+id/pinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:cursorVisible="true"
        android:gravity="center"
        android:inputType="number"
        android:textSize="20sp"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="43dp"
        app:itemRadius="10dp"
        app:itemSpacing="3dp"
        app:itemWidth="43dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_incorrectCode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/tv_phoneNumber"
        app:lineColor="@color/text_color"
        app:lineWidth="1dp"
        app:viewType="rectangle" />

    <TextView
        android:id="@+id/tv_incorrectCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="21dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/incorrect_code"
        android:textColor="@color/pink"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/pinView"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="273dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/btn_confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/pinView"
        app:layout_constraintStart_toStartOf="@+id/pinView"
        app:layout_constraintTop_toBottomOf="@+id/pinView" />

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="00:00"
        android:textColor="@color/pink"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_next"
        app:layout_constraintStart_toStartOf="@+id/btn_next"
        app:layout_constraintTop_toBottomOf="@+id/btn_next" />

    <Button
        android:id="@+id/tv_skip"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/send_again"
        android:textAllCaps="false"
        android:textColor="@color/pink"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_next" />


</androidx.constraintlayout.widget.ConstraintLayout>