<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MoreFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/tv_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/extra"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_profile"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background_extra"
        android:text="@string/profile"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:drawablePadding="14dp"
        android:drawableStart="@drawable/ic_user_profile"
        android:drawableEnd="@drawable/ic_arrow_forward"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_more" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_history_order"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background_extra"
        android:drawableStart="@drawable/ic_history_order"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:drawablePadding="14dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/history_order"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_profile" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_contacts"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background_extra"
        android:drawableStart="@drawable/ic_phone"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:drawablePadding="14dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/contacts"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_history_order" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_about_us"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background_extra"
        android:drawableStart="@drawable/ic_about_us"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:drawablePadding="30dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/about_us"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_contacts" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_exit"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background_extra"
        android:drawableStart="@drawable/ic_exit"
        android:drawablePadding="14dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/exit"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_about_us" />


</androidx.constraintlayout.widget.ConstraintLayout>